# gofreddy

./: .env.example  .gcloudignore  .gitattributes  .gitignore  AGENT_LAUNCHER.md  Dockerfile  Procfile  README.md  fly.toml  opencode.json  pyproject.toml  requirements.txt
audits/: lineage.jsonl
autoresearch/: GAPS.md  GAPS_IMPLEMENTATION_PLAN.md  README.md  agent_calls.py  agent_retry.py  archive_cli.py  archive_index.py  compute_metrics.py  concurrency.py  critique_manifest.py  cycle_detectors.py  embed_client.py  evaluate_variant.py  events.py  evolve.py  evolve.sh  evolve_lock.py  evolve_ops.py  frontier.py  geo-verify.sh  geo_verify.py  heartbeat.py  judge_calibration.py  lane_paths.py  lane_registry.py  lane_runtime.py  novelty_check.py  program_prescription_critic.py  regen_program_docs.py  report_base.py  run.sh  runtime_bootstrap.py  select_parent.py  sessions.py  test_lane_ownership.py
autoresearch_v2/: .critique-manifest.json  .gitignore  README.md  __init__.py  autoresearch.md  judges
cli/: pyproject.toml
cli/freddy/: __init__.py  api.py  config.py  main.py  output.py  providers.py  session.py
cli/freddy/commands/: accounts.py  analytics.py  articles.py  audit.py  auth.py  auto_draft.py  autoresearch.py  calendar.py  client.py  competitive.py  content.py  creator.py  detect.py  digest.py  evaluate.py  fixture.py  iteration.py  media.py  monitor.py  newsletter.py  publish.py  query_monitor.py  rank.py  save.py  scrape.py  search_ads.py  search_content.py  search_mentions.py  seo.py  session.py  setup.py  sitemap.py  transcript.py  trends.py  usage.py  video.py  visibility.py  write.py
cli/freddy/commands/_generated/: __init__.py  analyze_content.py  analyze_video.py  check_usage.py  competitor_ads.py  creator_profile.py  detect_fraud.py  discover_creators.py  evaluate_creators.py  generate_content.py  geo_check_visibility.py  manage_client.py  manage_monitor.py  manage_policy.py  query_monitor.py  search.py  seo_audit.py  think.py  video_generate.py  video_project.py  workspace.py
cli/freddy/fixture/: cache.py  cache_integration.py  dryrun.py  pool_policies.json  refresh.py  schema.py  sources.json
cli/scripts/: fetch_api.sh
cli/tests/: test_api.py  test_autoresearch_commands.py  test_commands.py  test_config.py  test_session.py
cloudflare-workers/: README.md  package-lock.json  package.json  tsconfig.json
data/: bundles_geo.yaml  bundles_segment.yaml  bundles_vertical.yaml  capability_registry.yaml  martech_rules.yaml  preflight_lenses.yaml  rubrics_acquisition.yaml  rubrics_experience.yaml  rubrics_findability.yaml  rubrics_narrative.yaml  rubrics_phase0_meta.yaml
docs/: HANDOFF-harness-fixer-decisions.md  data-transparency-rubric-proposal.md  render-pipeline-evolution-loop.md  render-pipeline-live-validation-2026-05-08.md  render-pipeline-test-2026-05-08.md
frontend/: .env.example  index.html  package-lock.json  package.json  playwright.critical.config.ts  playwright.video.config.ts  vite.config.ts  vitest.config.ts
harness/: INVENTORY.md  README.md  SEED.md  SMOKE.md  __init__.py  __main__.py  cli.py  config.py  conftest.py  engine.py  findings.py  inventory.py  preflight.py  prompts.py  review.py  run.py  safety.py  scorecard.py  sessions.py  smoke.py  test-matrix.md  worktree.py
judges/: invoke_cli.py  server.py
landing/: 404.html  CNAME  index.html  og-template.html  robots.txt  sitemap.xml
portal/: generate.py
programs/: marketing_audit-session.md
scripts/: a6_krippendorff_alpha.py  run_backend.sh  (+16 more)
(+1831 files in other folders)
