[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "freddy-cli"
version = "0.1.0"
description = "Freddy platform CLI tool for AI marketing agency operations"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.9,<1.0",
    "httpx>=0.27,<1.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-httpx>=0.30",
]

[project.scripts]
freddy = "freddy.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["freddy*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
